[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/DropSpawner.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 16, 0, 0, 0, 0, 0, 464, 0 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 384, 0, 0, 0, 0, 0, 32 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 480, 256, 0, 0, 0, 0, 480, 16 )
}

[node name="DropSpawner" type="Node"]
script = ExtResource( 1 )

[node name="AlgorithmTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DropTimer" type="Timer" parent="."]

[node name="DropPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="DropSpawnLocation" type="PathFollow2D" parent="DropPath"]
position = Vector2( 16, 0 )

[node name="LeftDropPath" type="Path2D" parent="."]
position = Vector2( 0, 11.6364 )
scale = Vector2( 1, 0.636364 )
curve = SubResource( 2 )

[node name="LeftDropSpawnLocation" type="PathFollow2D" parent="LeftDropPath"]
position = Vector2( 0, 384 )
rotation = -1.5708

[node name="RightDropPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="RightDropSpawnLocation" type="PathFollow2D" parent="RightDropPath"]
position = Vector2( 480, 256 )
rotation = -1.5708
[connection signal="timeout" from="AlgorithmTimer" to="." method="_on_AlgorithmTimer_timeout"]
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
